# contextualizer

./: .gitignore  Makefile  README.md  cborg_vision_model_guidance.md  function_summary.md  google-maps-api-monitoring.md  google-static-maps-zoom-levels.md  integrated_content.md  pyproject.toml
old_text/: geocoding_comparison.md  inferable_slots_from_latlon.md  map_interpretation_analysis.md  project_status.md  using-oak-for-text-normalization.md
src/: biosample_envo_normalizer.py  biosample_llm_comparator.py  biosample_map_interpreter.py  biosample_osm_enricher.py  make_nmdc_biosamples_location_inferences.py
src/agent_test/: enhanced_osm_query.txt  envo_agent.py  explore_osm_tags.sh  explore_osm_values.sh  geo_agent.py  hello_world.py  maptools.py  osm_feature_types.json  osm_features.py  soil_agent.py  weather.at.py  wikipedia_animal_qa.py
tests/: test_agent.py  test_minimal_agent.py  test_soil_agent.py
